<resources>
    <string name="app_name">松田教务系统</string>
    <string name="ed_ps">请输入密码</string>
    <string name="ed_code">请输入验证码</string>
    <string name="login">登陆</string>
    <string name="className">课程名称</string>
    <string name="ClassScore">课程成绩</string>
    <string name="stuNo">请输入学号</string>
    <string name="exam_time">考试时间</string>
    <string name="exam_subject">考试科目</string>
    <string name="exam_address">考试地点</string>
    <string name="level">级别</string>
    <string name="level_admissionTicket">准考证</string>
    <string name="level_grade">成绩</string>
    <string name="remember_ps">记住密码</string>
    <string name="subject">学科</string>
    <string name="score">成绩</string>
    <string name="choise_week">请选择周数</string>
    <string name="information">以下信息均来自教务系统</string>
    <string name="name">姓名</string>
    <string name="studentnumber">学号</string>
    <string name="major">专业</string>
    <string name="college">学院</string>
    <string name="orientation">专业方向</string>
    <string name="welcome">欢迎您：</string>
    <string name="seat_type">座位类型</string>
    <string name="from">始发地：</string>
    <string name="to">目的地：</string>
    <string name="suggest_title">意见建议</string>
    <string name="suggest_content">请详细描述您使用过程中遇到的问题，我们将对您的反馈进行处理。</string>
    <string name="suggest_confirm">提交反馈</string>
    <string name="Contact_title">联系方式</string>
    <string name="Contact_content">选填，便于我们和您取得联系</string>
    <string name="question_servey">问卷调查</string>
    <string name="confirm">提交</string>
    <string name="query">查询</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="serven">七</string>
    <string name="eight">八</string>
    <string name="night">九</string>
    <string name="ten">十</string>
    <string name="tweel">十一</string>
    <string name="erdengzuo">二等座</string>
    <string name="ok">确定</string>
    <string name="album">相册</string>
    <string name="exit">再按一次退出教务系统</string>
    <string name="advices">请输入您的意见建议哟</string>
    <string name="tip">提示</string>
    <string name="uploading">客官请稍等，正在努力上传</string>
    <string name="query_success">查询成功</string>
    <string name="query_error">查询出错啦</string>
    <string name="loging">正在登陆</string>
    <string name="must_insert">不可以偷懒不填哟</string>


    <string name="loginFailure">登录失败,请重试</string>
    <string name="failuregetcode">获取验证码失败</string>
    <string name="failuregetviewstate">获取状态码失败</string>
    <string name="sourcenodata">这学期还没有数据哟</string>
    <string name="ticket_error">查询出错啦，换个地址试试</string>
    <string name="ticket_address">两个地点都要填哟</string>
    <string name="choiseweek">请选择周数</string>
    <string name="submiting">正在提交</string>
    <string name="submitsuccess">提交成功啦，感谢您提出的宝贵意见</string>
    <string name="submit">提交反馈</string>

</resources>
