<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteSmoke"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/suggest_title"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhile"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/suggest_content"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            />

        <TextView
            android:id="@+id/show_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="end"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/Contact_title"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhile"
        android:hint="@string/Contact_content"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        />

    <Button
        android:id="@+id/confirm_suggest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/button_style"
        android:text="@string/suggest_confirm"
        android:textColor="@color/colorWhile"/>
</LinearLayout>