<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCadetBlue"
    >
    <!-- android:focusable="true"
        android:focusableInTouchMode="true" 默认拦截EditText的焦点-->
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/score_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:hint="@string/stuNo"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textSize="28sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"/>

        <cn.my.forward.customview.MyPsEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:hint="@string/ed_ps"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="28sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_ps"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ed_code"
                android:textSize="28sp"
                />

            <ImageView
                android:id="@+id/showCode"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.5"
                android:clickable="true"
                />
        </LinearLayout>


    </LinearLayout>

    <CheckBox
        android:id="@+id/activity_main_remberps_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finalto"
        android:layout_alignStart="@id/content"
        android:layout_below="@id/content"
        android:layout_toStartOf="@id/finalto"
        android:button="@drawable/check_box_style"
        android:checked="true"
        android:text="@string/remember_ps"/>

    <Button
        android:id="@+id/finalto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/content"
        android:layout_below="@id/content"
        android:background="@drawable/sorce_buttonk"
        android:text="@string/query"
        />


</RelativeLayout>